Resets original pipes; Disables highlights (must be reactivated); Removes background flickering from Mol*

--- a/projects/demo-showcase/src/styles/_background.scss
+++ b/projects/demo-showcase/src/styles/_background.scss
@@ -1,9 +1,9 @@
-$gradient: linear-gradient(45deg, rgb(255, 38, 0), #440064);
+// $gradient: linear-gradient(45deg, #648FFF, #DC267F);
 
 .navbar {
-  background: $gradient;
+  background: #648FFF;
 }
 
 .bg-primary {
-  background: $gradient;
+  background: #648FFF;
 }
