--- a/projects/ngx-structure-viewer/src/lib/ngx-structure-viewer.component.scss
+++ b/projects/ngx-structure-viewer/src/lib/ngx-structure-viewer.component.scss
@@ -1,27 +1,31 @@
-.ngx-structure-viewer {
-  // Define outer container
-  &-container {
-    position: relative;
+:host {
+    overflow: hidden;
+    display: block;
     height: 100%;
-    width: 100%; 
-  }
-  // Define inner canvas
-  &-canvas {
-    position: absolute; 
-    height: 100%;
-    width: 100%; 
-    left: 0; 
-    top: 0; 
-  }
-  // // Define inner label
-  // &-label {
-  //   position: absolute;
-  //   padding: .25rem;
-  //   margin: 1rem;
-  //   height: auto;
-  //   width: auto; 
-  //   bottom: 0;
-  //   right: 0; 
-  // }
-}
+    width: 100%;
 
+    ::ng-deep {
+        @import 'molstar/lib/mol-plugin-ui/skin/dark.scss';
+
+        canvas {
+            background-image: none !important;
+            background: transparent !important;
+        }
+
+        &.msp-plugin .msp-viewport {
+            background: revert;
+        }
+
+        .msp-plugin {
+            background: revert;
+        }
+
+        .msp-plugin .msp-layout-standard {
+            border: revert;
+        }
+
+        .msp-highlight-toast-wrapper {
+            z-index: 3 !important;
+        }
+    }
+}
