--- a/projects/ngx-features-viewer/src/lib/ngx-features-viewer.component.html
+++ b/projects/ngx-features-viewer/src/lib/ngx-features-viewer.component.html
@@ -26,7 +26,7 @@
 </div>
 
 <!-- Initialize tooltip -->
-<div style="position: fixed; left: 0; top: 0; display: none" #tooltip>
+<div class="tooltip" #tooltip>
   <!-- Define tooltip inner scaffold -->
   <div style="position: relative; display: block">
     <!-- Subscribe to template emission -->
