--- a/projects/demo-showcase/src/app/page-sequence-viewer/page-sequence-viewer.component.html
+++ b/projects/demo-showcase/src/app/page-sequence-viewer/page-sequence-viewer.component.html
@@ -2,6 +2,6 @@
   <h1>Sequence viewer</h1>
   <!-- Test sequence viewer -->
   <div class="mb-3">
-    <ngx-sequence-viewer [fasta]="fasta" [split]="split"></ngx-sequence-viewer>
+    <ngx-sequence-viewer [fasta]="fasta" [split]="split" [loci]="loci"></ngx-sequence-viewer>
   </div>
 </div>
